--- a/proyecto-angular/src/app/app.component.html
+++ b/proyecto-angular/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>Bienvenido a la Aplicación de Generación de Evaluaciones</h1>
-<button routerLink="/evaluation-generator">Ir al Generador de Evaluaciones</button>
-<router-outlet></router-outlet>
+<!-- <h1>Bienvenido a la Aplicación de Generación de Documentos</h1>
+<button routerLink="/document-generator">Ir al Generador de Documentos Word</button>
+<button routerLink="/evaluation-generator">Ir al Generador de cuestionarios</button>
+<router-outlet></router-outlet> -->
