--- a/proyecto-angular/src/app/components/document-generator/document-generator.component.css
+++ b/proyecto-angular/src/app/components/document-generator/document-generator.component.css
@@ -1,6 +1,5 @@
 :host {
   display: block;
-  max-width: 800px;
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
@@ -12,6 +11,7 @@ h1 {
 }
 
 form {
+  width: 65%;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -52,4 +52,31 @@ button:hover {
 button:disabled {
   background-color: #cccccc;
   cursor: not-allowed;
+}
+
+
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+aside {
+  width: 30%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 9px;
+  background-color: #f9f9f9;
+}
+
+.document-cards {
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  border: 1px solid #ddd;
+  margin: 10px 0;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: #fff;
 }
